# lower-bounded-proper-losses

./: LICENSE  README.md  config_schema.py  main.py  pyproject.toml
config/cifar10-resnet20/: backward.yml  backward_ga.yml  logit_squeezing.yml
config/cifar10-wrn_28_2/: backward.yml  backward_ga.yml  logit_squeezing.yml
config/mnist-linear/: backward.yml  backward_ga.yml  logit_squeezing.yml
config/mnist-mlp500/: backward.yml  backward_ga.yml  logit_squeezing.yml
data/: data_loader.py  datasets.py  weak_labels.py
handlers/: lr_reduction_early_stopping.py  lr_scheduler.py  state_at_best_val.py
modules/: gls.py  losses.py  models.py
utils/: config.py  logging.py
